--- a/migration/src/styles/all.css
+++ b/migration/src/styles/all.css
@@ -11,6 +11,10 @@ body {
     flex-direction: column;
     width: 100vw;
     height: 100vh;
+    background-image: url('../assets/background.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 hr {
